k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contactstore-service
spec:
  type: ClusterIP
  selector:
    app: contactstore
  ports:
  - port: 3000
    targetPort: 8080
